--- a/src/Adstacy/AppBundle/Resources/views/App/tags.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/tags.html.twig
@@ -14,7 +14,7 @@
   <ul id="browse-tags">
     <li><a href="{{ path('adstacy_app_search', {q: 'jual'}) }}" title="Jual">Jual <small>#jual</small></a></li>
     <li><a href="{{ path('adstacy_app_search', {q: 'beli'}) }}" title="Beli">Beli <small>#beli</small></a></li>
-    <li><a href="{{ path('adstacy_app_search', {q: 'loker'}) }}" title="Lowongan Kerja">Lowongan Kerja <small>#lowker</small></a></li>
+    <li><a href="{{ path('adstacy_app_search', {q: 'loker'}) }}" title="Lowongan Kerja">Lowongan Kerja <small>#lowongankerja</small></a></li>
     <li><a href="{{ path('adstacy_app_search', {q: 'promo'}) }}" title="Promo">Promo <small>#promo</small></a></li>
     <li><a href="{{ path('adstacy_app_search', {q: 'event'}) }}" title="Event">Event <small>#event</small></a></li>
     <li><a href="{{ path('adstacy_app_search', {q: 'property'}) }}" title="Property">Rumah <small>#rumah</small></a></li>
