fix view profile on self.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -12,7 +12,7 @@
 
   .ad-sect {
     border-top: 1px solid @border-color;
-    padding: 5px 10px;
+    padding: @padding-small-vertical @padding-small-horizontal;
 
     > p {
       font-size: 13px;
@@ -68,8 +68,8 @@
       border-bottom-right-radius: @border-radius-base;
     }
     .unpromote:hover {
-      background-color: #333;
-      border-color: #333;
+      background-color: @gray-dark;
+      border-color: @gray-dark;
     }
   }
 }
@@ -109,7 +109,7 @@
     margin-bottom: 4px;
   }
   .user-realname-a {
-    color: #555;
+    color: @gray;
   }
 }
 
