Change landing page features.

--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -68,33 +68,6 @@
     </section>
     <section class="main-section">
       <div class="main-pic">
-        <i class="icon-bullhorn"></i>
-      </div>
-      <div class="main-content">
-        <h1>{{ "landing.features.social.heading"|trans|raw }}</h1>
-        <p class="lead">{{ "landing.features.social.desc"|trans|raw }}</p>
-      </div>
-    </section>
-    <section class="main-section last">
-      <div class="main-pic">
-        <i class="icon-rocket"></i>
-      </div>
-      <div class="main-content">
-        <h1>{{ "landing.features.fast.heading"|trans|raw }}</h1>
-        <p class="lead">{{ "landing.features.fast.desc"|trans|raw }}</p>
-      </div>
-    </section>
-    <section class="main-section">
-      <div class="main-pic">
-        <i class="icon-search"></i>
-      </div>
-      <div class="main-content">
-        <h1>{{ "landing.features.search.heading"|trans|raw }}</h1>
-        <p class="lead">{{ "landing.features.search.desc"|trans|raw }}</p>
-      </div>
-    </section>
-    <section class="main-section">
-      <div class="main-pic">
         <i class="icon-hash"></i>
       </div>
       <div class="main-content">
@@ -104,11 +77,38 @@
     </section>
     <section class="main-section last">
       <div class="main-pic">
-        <i class="icon-dollar"></i>
+        <i class="icon-search"></i>
       </div>
       <div class="main-content">
-        <h1>{{ "landing.features.free.heading"|trans|raw }}</h1>
-        <p class="lead">{{ "landing.features.free.desc"|trans|raw }}</p>
+        <h1>{{ "landing.features.search.heading"|trans|raw }}</h1>
+        <p class="lead">{{ "landing.features.search.desc"|trans|raw }}</p>
+      </div>
+    </section>
+    <section class="main-section last">
+      <div class="main-pic">
+        <i class="icon-rocket"></i>
+      </div>
+      <div class="main-content">
+        <h1>{{ "landing.features.trending.heading"|trans|raw }}</h1>
+        <p class="lead">{{ "landing.features.trending.desc"|trans|raw }}</p>
+      </div>
+    </section>
+    <section class="main-section">
+      <div class="main-pic">
+        <i class="icon-bullhorn"></i>
+      </div>
+      <div class="main-content">
+        <h1>{{ "landing.features.stream.heading"|trans|raw }}</h1>
+        <p class="lead">{{ "landing.features.stream.desc"|trans|raw }}</p>
+      </div>
+    </section>
+    <section class="main-section">
+      <div class="main-pic">
+        <i class="icon-globe"></i>
+      </div>
+      <div class="main-content">
+        <h1>{{ "landing.features.explore.heading"|trans|raw }}</h1>
+        <p class="lead">{{ "landing.features.explore.desc"|trans|raw }}</p>
       </div>
     </section>
     <!-- end inline-block -->
