--- a/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -14,6 +14,7 @@
     <div class="panel-heading"><h1>{{"form_password.title"|trans}}</h1></div>
     <div class="panel-body">
       {{ form_start(form, { attr: { class: 'form-horizontal', role: 'form' } }) }}
+        {{ form_errors(form) }}
         <div class="form-group">
           {{ form_label(form.current_password, label|default(null), { label_attr: { class: 'control-label' } }) }}
           <div class="form-widget">
