Add feeds navigation.

--- a/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/adstacy.less
@@ -60,4 +60,5 @@
 @import "./module/dropdown-box.less";
 @import "./layout/site-header.less";
 @import "./layout/ad.less";
+@import "./layout/feeds.less";
 @import "./layout/user.less";
