change reset, request, change password convention.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/reset.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/reset.less
@@ -1,11 +1,11 @@
 @import "../variables.less";
 
-#reset-password-container {
+#reset-password {
   width: 500px;
   margin: 150px auto;
 }
 
-#reset-verification-container {
+#reset-verification {
   width: 750px;
   margin: 100px auto;
 
@@ -29,7 +29,7 @@
 }
 
 @media screen and (max-width: @screen-tablet) {
-  #reset-password-container, #reset-verification-container {
+  #reset-password, #reset-verification {
     width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
