--- a/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
+++ b/src/Adstacy/UserBundle/Resources/views/ChangePassword/changePassword.html.twig
@@ -3,14 +3,14 @@
 {% block stylesheets %}
   {{ parent() }}
   {% stylesheets filter='cssrewrite, uglifycss'
-    'bundles/adstacyapp/less/layout/settings.less'
+    'bundles/adstacyapp/less/layout/change_password.less'
   %}
     <link href="{{ asset_url }}" type="text/css" rel="stylesheet">
   {% endstylesheets %}
 {% endblock %}
 
 {% block content %}
-  <div class="panel panel-default" id="settings-container">
+  <div id="change-password" class="panel panel-default">
     <div class="panel-heading"><h1>{{"form_password.title"|trans}}</h1></div>
     <div class="panel-body">
       {{ form_start(form, { attr: { class: 'form-horizontal', role: 'form' } }) }}
