--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -45,8 +45,8 @@
         <div id="site-nav-box" class="dropdown-menu">
           <nav>
             <ul id="site-nav" class="dropdown-box-header list-inline list-unstyled">
-              <li><a href="{{ path('adstacy_app_explore') }}" title="Explore"><i class="icon-home"></i>&nbsp; Explore</a></li>
-              <li><a href="{{ path('adstacy_app_stream') }}"><i class="icon-rss"></i>&nbsp; {{"stream"|trans}}</a></li>
+              <li><a href="{{ path('adstacy_app_explore') }}" title="Explore"><i class="icon-globe"></i>&nbsp; Explore</a></li>
+              <li><a href="{{ path('adstacy_app_stream') }}"><i class="icon-bullhorn"></i>&nbsp; {{"stream"|trans}}</a></li>
               <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><i class="icon-rocket"></i>&nbsp; Trending</a></li>
             </ul>
           </nav>
