--- a/src/Adstacy/AppBundle/Resources/public/less/layout/feeds.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/feeds.less
@@ -24,3 +24,11 @@
     border-top: 0;
   }
 }
+
+@media screen and (max-width: 480px) {
+  #feeds-masonry {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
