Responsive user profile.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -123,6 +123,29 @@
   }
 }
 
+@media screen and (max-width: 480px) {
+  #user-profile {
+    width: 100%;
+    .user-desc {
+      float: none;
+      width: 100%;
+      text-align: center;
+    }
+    .profile-picture {
+      float: none;
+      width: 100%;
+      text-align: center;
+      margin: 10px 0 0;
+    }
+    .user-info-realname {
+      text-align: center;
+    }
+    .follow-action {
+      position: static;
+    }
+  }
+}
+
 .page-title {
   padding:0;
 }
