revert to red promote btn. fix create ad and setting margin.

--- a/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/base/layout.less
@@ -2,13 +2,16 @@ body {
   color: #333;
   font-size: 13px;
   padding-top: 50px;
-  margin-bottom: 14px;
   background-color: #dfdfdf;
 }
 
 /** Class components **/
-.masonry, .adstacy-container {
-  margin: auto;
+.masonry {
+  margin: 0 auto 14px;
+}
+
+.adstacy-container {
+  margin: 0 auto;
 }
 
 .follow-container {
