fix feature positioning with clearfix.

--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -57,49 +57,53 @@
       </div>
     </div>
 
-    <div id="landing-features" class="wrapper clearfix">
-      <section class="section">
-        <div class="section-figure">
-          <i class="icon-ads"></i>
-        </div>
-        <h1 class="section-title">{{ "landing.features.easy.heading"|trans|raw }}</h1>
-        <p class="lead">{{ "landing.features.easy.desc"|trans|raw }}</p>
-      </section>
-      <section class="section">
-        <div class="section-figure">
-          <i class="icon-hash"></i>
-        </div>
-        <h1 class="section-title">{{ "landing.features.hashtag.heading"|trans|raw }}</h1>
-        <p class="lead">{{ "landing.features.hashtag.desc"|trans|raw }}</p>
-      </section>
-      <section class="section">
-        <div class="section-figure">
-          <i class="icon-search"></i>
-        </div>
-        <h1 class="section-title">{{ "landing.features.search.heading"|trans|raw }}</h1>
-        <p class="lead">{{ "landing.features.search.desc"|trans|raw }}</p>
-      </section>
-      <section class="section">
-        <div class="section-figure">
-          <i class="icon-rocket"></i>
-        </div>
-        <h1 class="section-title">{{ "landing.features.trending.heading"|trans|raw }}</h1>
-        <p class="lead">{{ "landing.features.trending.desc"|trans|raw }}</p>
-      </section>
-      <section class="section">
-        <div class="section-figure">
-          <i class="icon-bullhorn"></i>
-        </div>
-        <h1 class="section-title">{{ "landing.features.stream.heading"|trans|raw }}</h1>
-        <p class="lead">{{ "landing.features.stream.desc"|trans|raw }}</p>
-      </section>
-      <section class="section">
-        <div class="section-figure">
-          <i class="icon-globe"></i>
-        </div>
-        <h1 class="section-title">{{ "landing.features.explore.heading"|trans|raw }}</h1>
-        <p class="lead">{{ "landing.features.explore.desc"|trans|raw }}</p>
-      </section>
+    <div id="landing-features" class="wrapper">
+      <div class="clearfix">
+        <section class="section">
+          <div class="section-figure">
+            <i class="icon-ads"></i>
+          </div>
+          <h1 class="section-title">{{ "landing.features.easy.heading"|trans|raw }}</h1>
+          <p class="lead">{{ "landing.features.easy.desc"|trans|raw }}</p>
+        </section>
+        <section class="section">
+          <div class="section-figure">
+            <i class="icon-hash"></i>
+          </div>
+          <h1 class="section-title">{{ "landing.features.hashtag.heading"|trans|raw }}</h1>
+          <p class="lead">{{ "landing.features.hashtag.desc"|trans|raw }}</p>
+        </section>
+        <section class="section">
+          <div class="section-figure">
+            <i class="icon-search"></i>
+          </div>
+          <h1 class="section-title">{{ "landing.features.search.heading"|trans|raw }}</h1>
+          <p class="lead">{{ "landing.features.search.desc"|trans|raw }}</p>
+        </section>
+      </div>
+      <div class="clearfix">
+        <section class="section">
+          <div class="section-figure">
+            <i class="icon-rocket"></i>
+          </div>
+          <h1 class="section-title">{{ "landing.features.trending.heading"|trans|raw }}</h1>
+          <p class="lead">{{ "landing.features.trending.desc"|trans|raw }}</p>
+        </section>
+        <section class="section">
+          <div class="section-figure">
+            <i class="icon-bullhorn"></i>
+          </div>
+          <h1 class="section-title">{{ "landing.features.stream.heading"|trans|raw }}</h1>
+          <p class="lead">{{ "landing.features.stream.desc"|trans|raw }}</p>
+        </section>
+        <section class="section">
+          <div class="section-figure">
+            <i class="icon-globe"></i>
+          </div>
+          <h1 class="section-title">{{ "landing.features.explore.heading"|trans|raw }}</h1>
+          <p class="lead">{{ "landing.features.explore.desc"|trans|raw }}</p>
+        </section>
+      </div>
     </div>
   </div>
 {% endblock %}
