--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -80,7 +80,7 @@
             </ul>
           </div>
         {% else %}
-          {% if register is defined and register == true %}
+          {% if register is not defined or (register is defined and register == true) %}
             <a id="register-link" href="{{ path('fos_user_registration_register') }}" class="btn btn-success navbar-btn">{{"register"|trans}}</a>
           {% endif %}
           <a id="mobile-login-link" href="{{ path('fos_user_security_login') }}" class="btn btn-primary">Login</a>
