Fix responsive show ad.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -104,10 +104,10 @@
 }
 
 @media screen and (max-width: @screen-tablet) {
-  #ad-detail, #ad-detail-content {
-    width: 100%;
+  #show-ad, #show-ad-content {
+    width: 100% !important;
   }
-  #ad-detail-sidebar {
+  #show-ad-owner {
     display: none;
   }
 }
