--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -79,7 +79,7 @@
       </div>
 
       {% if ad.content %}
-        <div class="panel panel-default">
+        <div id="ad-content" class="panel panel-default">
           <div class="panel-body">
             {{ ad.content|raw }}
           </div>
