--- a/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
@@ -1,7 +1,7 @@
 @import "../variables.less";
 @import "../mixins.less";
 
-#show-ad {
+#show-ad-single {
   position: relative;
   width: 1000px;
   margin: 14px auto;
