--- a/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/ad.html.twig
@@ -9,7 +9,7 @@
   </div>
 
   {# weird bugs. cannot use ad-section class name #}
-  <div class="ad-sect">
+  <div class="ad-sect break-word">
     <p>{{ parse_url(parse_hashtag(ad.description)) }}</p>
   </div>
 
