Fixed unresponsive ad image width size.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -64,7 +64,7 @@
   }
 }
 
-.ad-image {
+.ad-img {
   background-image: url('../img/diagonal-line.png');
   border-radius: @border-radius-base @border-radius-base 0 0;
   position: relative;
