Fix super weird bug.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -64,7 +64,7 @@
   }
 }
 
-.ad-img {
+.ad-image {
   background-image: url('../img/diagonal-line.png');
   border-radius: @border-radius-base @border-radius-base 0 0;
   position: relative;
@@ -109,7 +109,7 @@
     height: auto;
     margin: 10px 0;
   }
-  .ad-img img {
+  .ad-image img {
     width: 100%;
     height: auto;
     display: block;
