define exact size on mini profile picture.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -78,16 +78,15 @@
 .user-mini {
   .user-desc {
     line-height: 1;
-    margin: 0;
     float: left;
   }
   .profile-picture {
     float: left;
     margin-right: 10px;
-    width: 30px;
   }
   .profile-picture-img {
-      width: 30px;
+    width: 30px;
+    height: 30px;
   }
   .user-label {
     color: #aaa;
