--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -8,9 +8,11 @@
   .profile-picture {
     float: left;
     margin-bottom: 5px;
+
     img {
       border-radius: 3px;
       width: 105px;
+      height: 105px;
     }
   }
 
@@ -18,7 +20,7 @@
     float: right;
     width: 105px;
   }
-  
+
   .user-mini-ad {
     float: left;
     width: 47px;
@@ -60,10 +62,11 @@
     border-radius: 3px 0 0 0;
     float: left;
     margin-right: 10px;
-    width: 130px;
+
     img {
-    border-radius: 3px 0 0 0;
+      border-radius: 3px 0 0 0;
       width: 130px;
+      height: 130px;
     }
   }
   .user-desc {
