--- a/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/stream.html.twig
@@ -44,7 +44,7 @@
           var $ads = $('.jscroll-added:last .ad');
           $masonry = $('.masonry').masonry('appended', $ads);
           $ads.find('img.lazy').lazyload();
-          $ads.find('.ad-social').ajaxlink('ads');
+          $ads.find('.ad').ajaxlink('ads');
         }
       });
     });
