Responsive user.html.twig

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/user.less
@@ -147,6 +147,33 @@
       position: static;
     }
   }
+  .user {
+    width: 100%;
+    padding: 0;
+    height: auto;
+    .user-realname, .profile-picture, .user-ads, .user-score {
+      text-align: center;
+    }
+    .profile-picture, .user-ads {
+      float: none;
+    }
+    .user-ads {
+      width: 100%;
+    }
+    .user-score {
+      margin-bottom: 0;
+    }
+    .user-mini-ad {
+      float: none;
+      display: inline-block;
+    }
+    .follow-action {
+      padding: 0;
+      a {
+        border-radius: 0;
+      }
+    }
+  }
 }
 
 .page-title {
