--- a/src/Adstacy/AppBundle/Resources/public/less/layout/landing.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/landing.less
@@ -93,6 +93,36 @@ body {
   margin-top: 40px;
 }
 
+#landing-social {
+  border-top: 1px solid @border-color;
+  padding: 20px 0;
+  text-align: center;
+  margin-top: 20px !important;
+
+  .btn {
+    margin: 0 10px;
+  }
+
+  .btn-facebook,
+  .btn-twitter {
+    position: relative;
+    padding-left: 55px;
+  }
+
+  .icon-facebook,
+  .icon-twitter {
+    position: absolute;
+    font-size: 1.4em;
+    top: 0;
+    left: 0;
+    border-right: 1px solid fade(#000, 15%);
+    box-shadow: 1px 0 1px fade(#fff, 15%);
+    width: 44px;
+    height: 43px;
+    line-height: 43px;
+  }
+}
+
 #register-form {
   width: 300px;
   float: right;
@@ -130,6 +160,12 @@ body {
 
   #landing-title {
     background: @gray-darker;
+  }
+
+  #landing-social {
+    .btn:not(:first-child) {
+      margin-top: 10px;
+    }
   }
 }
 
