--- a/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/App/landing.html.twig
@@ -105,5 +105,14 @@
         </section>
       </div>
     </div>
+
+    <div id="landing-social" class="wrapper">
+      <a href="https://www.facebook.com/adstacycom" class="btn btn-facebook btn-lg">
+        <span class="icon-facebook"></span> Like us on Facebook
+      </a>
+      <a href="https://www.twitter.com/adstacycom" class="btn btn-twitter btn-lg">
+        <span class="icon-twitter"></span> Follow us on Twitter
+      </a>
+    </div>
   </div>
 {% endblock %}
