--- a/src/Adstacy/AppBundle/Resources/views/User/user.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/user.html.twig
@@ -2,7 +2,7 @@
   <div class="clearfix">
     <h5 class="user-realname text-overflow"><a href="{{ path('adstacy_app_user_profile', {username: user.username}) }}">{{ user.realname }}</a></h5>
     <div class="profile-picture"><img src="{{ profile_pic(user) }}" /></div>
-    <div class="user-ads">
+    <div class="user-ads clearfix">
       {% set ads = user.ads|slice(4) %}
       {% for i in 0..3 %}
         <div class="user-mini-ad">
