fix img sizing.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -100,8 +100,10 @@
         <div id="user-latest-ads" class="clearfix">
           {% for adByUser in adsByUser %}
             <div class="thumb">
-              <a href="{{ path('adstacy_app_ad_show', {id: adByUser.id}) }}"><img src="{{ vich_uploader_asset(adByUser, 'image')|imagine_filter('mini_thumb')}}"
-                width="{{ mini_thumb_size }}px" height="{{ mini_thumb_size }}px"></a>
+              <a href="{{ path('adstacy_app_ad_show', {id: adByUser.id}) }}">
+                <img src="{{ vich_uploader_asset(adByUser, 'image')|imagine_filter('mini_thumb')}}"
+                  width="{{ mini_thumb_size }}" height="{{ mini_thumb_size }}">
+              </a>
             </div>
           {% endfor %}
         </div>
