--- a/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_ads.html.twig
@@ -40,7 +40,7 @@
     <div class="panel panel-default">
       <div class="clearfix">
         <div class="profile-picture">
-          <img src="{{ profile_pic(user) }}">
+          <img src="{{ profile_pic(user) }}" width="130" height="130">
         </div>
         <div class="user-desc">
           <div class="user-info">
