--- a/src/Adstacy/AppBundle/Resources/views/User/user_mini.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/user_mini.html.twig
@@ -3,7 +3,7 @@
 {% endif %}
 <div class="user-mini">
   <div class="profile-picture">
-    <img class="profile-picture-img" src="{{ profile_pic(user) }}" alt="{{ user.username }}">
+    <img class="profile-picture-img" src="{{ profile_pic(user) }}" alt="{{ user.username }}" width="30" height="30">
   </div>
   <div class="user-desc">
       <div class="user-realname">
