Fix pagination javascript.

--- a/src/Adstacy/AppBundle/Resources/views/Search/users.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Search/users.html.twig
@@ -33,7 +33,7 @@
           var $users = $('.jscroll-added:last .user');
           $masonry = $('.masonry').masonry('appended', $users);
           $users.find('img.lazy').lazyload();
-          $users.find('.user').ajaxlink('users');
+          $users.ajaxlink('users');
         }
       });
     });
