--- a/src/Adstacy/AppBundle/Resources/views/User/show_users.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/show_users.html.twig
@@ -47,9 +47,9 @@
         nextSelector: 'a.next-page',
         callback: function(a, b) {
           var $users = $('.jscroll-added:last .user');
-          $masonry = $('.masonry').masonry('appended', $users);
+          $('.masonry').masonry('appended', $users);
           $users.find('img.lazy').lazyload();
-          $users.find('.user').ajaxlink('users');
+          $users.ajaxlink('users');
         }
       });
     });
