--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -85,10 +85,9 @@
     padding: 2px 10px;
     width: 130px;
     &:hover {
-      background-color: @link-primary;
+      background-color: @gray-lighter;
       border-radius: @border-radius-base;
-      .box-shadow(inset 0 0 5px #555);
-      color: #fff;
+      .box-shadow(inset 0 0 3px #bbb);
       text-decoration: none;
     }
   }
