--- a/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
@@ -96,6 +96,21 @@
   overflow-y: auto;
 }
 
+#comments-sect {
+  padding: 20px 10px;
+}
+
+#comments {
+  .comment-user-pic {
+    float: left; 
+    width: 60px;
+    height: 60px;
+  }
+  .comment-desc {
+    float: left;
+  }
+}
+
 @media screen and (max-width: @screen-tablet) {
   #show-ad, #show-ad-content, #ad-content {
     width: 100% !important;
