Fix show ad promote javascript.

--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -149,7 +149,7 @@
   {{ parent() }}
   <script type="text/javascript">
     $(function() {
-      $('#show-ad').ajaxlink('promote_single');
+      $('#show-ad-single').ajaxlink('promote_single');
       $('#show-ad-owner').ajaxlink('follow_single');
       $('#show-ad-owner').scrollToFixed({
         marginTop: 55
