add text overflow on username.

--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -124,9 +124,9 @@
     margin: 0;
   }
   .user-username {
+    width: 100px;
     color: #555;
     display:inline-block;
-    padding: 5px 12px;
     vertical-align: middle;
   }
 }
