--- a/src/Adstacy/AppBundle/Resources/views/User/user_mini.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/User/user_mini.html.twig
@@ -6,7 +6,7 @@
     <img class="profile-picture-img" src="{{ profile_pic(user) }}" alt="{{ user.username }}" width="30" height="30">
   </div>
   <div class="user-desc">
-      <div class="user-realname">
+      <div class="user-realname text-overflow">
         {% if as_link is defined and as_link == false %}
           <span>{{ user.username }}</span>
         {% else %}
