--- a/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
@@ -1,7 +1,7 @@
 @import "../variables.less";
 @import "../mixins.less";
 
-#show-ad-single {
+#show-ad {
   position: relative;
   width: 1000px;
   margin: 14px auto;
@@ -95,13 +95,13 @@
   }
 }
 
-#ad-content {
+#show-ad-long-desc {
   width: 750px;
   overflow-y: auto;
 }
 
 @media screen and (max-width: @screen-tablet) {
-  #show-ad, #show-ad-content, #ad-content {
+  #show-ad, #show-ad-content, #show-ad-long-desc {
     width: 100% !important;
   }
   #show-ad-owner {
