Add hashtags help to form ad

--- a/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/form.html.twig
@@ -32,6 +32,7 @@
       <div id="create-ad-desc">
         <div class="clearfix">
           {{ form_label(form.description) }}
+          <span class="help">({{"form_ad.helps.description"|trans}})</span>
           <div class="pull-right">
             <a id="desc-examples" href="#" data-toggle="modal" data-target="#examples-modal">{{ "form_ad.example"|trans }}</a>
           </div>
