--- a/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/create_ad.less
@@ -16,6 +16,10 @@
   textarea.form-control {
     resize: vertical;
   }
+  span.help {
+    color: #999;
+    font-size: 12px;
+  }
 }
 
 #show-long-desc-btn, #chars-left-box {
