--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -36,30 +36,36 @@
         <input id="search-type" type="hidden" name="type" value="{% if isSearchUser %}users{% else %}ads{% endif %}">
       </form>
 
-      <div id="site-nav-dropdown" class="btn-group navbar-btn navbar-left">
-        <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-          <i class="icon-bar"></i>
-          <i class="icon-bar"></i>
-          <i class="icon-bar"></i>
-        </button>
-        <div id="site-nav-box" class="dropdown-menu">
-          <nav>
-            <ul id="site-nav" class="dropdown-box-header list-inline list-unstyled">
-              <li><a href="{{ path('adstacy_app_explore') }}" title="Explore"><i class="icon-globe"></i>&nbsp; Explore</a></li>
-              <li><a href="{{ path('adstacy_app_stream') }}"><i class="icon-bullhorn"></i>&nbsp; {{"stream"|trans}}</a></li>
-              <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><i class="icon-rocket"></i>&nbsp; Trending</a></li>
+      <div id="extra-nav-box" class="btn-group navbar-btn navbar-left">
+        <a href="{{ path('adstacy_app_stream') }}" class="btn btn-default extra-nav" title="Stream"><i class="icon-bullhorn"></i>&nbsp; {{"stream"|trans}}</a>
+        <a href="{{ path('adstacy_app_explore') }}" class="btn btn-default extra-nav" title="Explore"><i class="icon-globe"></i>&nbsp; Explore</a>
+        <a href="{{ path('adstacy_app_trending') }}" class="btn btn-default extra-nav" title="Trending"><i class="icon-rocket"></i>&nbsp; Trending</a>
+        <div id="site-nav-dropdown" class="btn-group">
+          <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+            <i class="icon-bar"></i>
+            <i class="icon-bar"></i>
+            <i class="icon-bar"></i>
+          </button>
+          <div id="site-nav-box" class="dropdown-menu pull-right">
+            <nav>
+              <ul id="site-nav" class="dropdown-box-header list-inline list-unstyled">
+                <li><a href="{{ path('adstacy_app_stream') }}" title="Stream"><i class="icon-bullhorn"></i>&nbsp; {{"stream"|trans}}</a></li>
+                <li><a href="{{ path('adstacy_app_explore') }}" title="Explore"><i class="icon-globe"></i>&nbsp; Explore</a></li>
+                <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><i class="icon-rocket"></i>&nbsp; Trending</a></li>
+              </ul>
+            </nav>
+            <ul id="tag-list" class="dropdown-box-body list-inline list-unstyled">
+              {% include 'AdstacyAppBundle:App:tag_list.html.twig' %}
             </ul>
-          </nav>
-          <ul id="tag-list" class="dropdown-box-body list-inline list-unstyled">
-            {% include 'AdstacyAppBundle:App:tag_list.html.twig' %}
-          </ul>
-          <ul id="site-info" class="dropdown-box-footer list-inline list-unstyled">
-            <li><a href="{{ path('adstacy_app_page_show', {key: 'about'}) }}">{{"about"|trans}}</a></li>
-            <li><a href="{{ path('adstacy_app_page_show', {key: 'terms'}) }}">{{"terms"|trans}}</a></li>
-            <li><a href="{{ path('adstacy_app_page_show', {key: 'privacy-policy'}) }}">{{"privacy"|trans}}</a></li>
-            <li><a href="{{ path('adstacy_app_contact') }}">{{"contact_us"|trans}}</a></li>
-          </ul>
+            <ul id="site-info" class="dropdown-box-footer list-inline list-unstyled">
+              <li><a href="{{ path('adstacy_app_page_show', {key: 'about'}) }}">{{"about"|trans}}</a></li>
+              <li><a href="{{ path('adstacy_app_page_show', {key: 'terms'}) }}">{{"terms"|trans}}</a></li>
+              <li><a href="{{ path('adstacy_app_page_show', {key: 'privacy-policy'}) }}">{{"privacy"|trans}}</a></li>
+              <li><a href="{{ path('adstacy_app_contact') }}">{{"contact_us"|trans}}</a></li>
+            </ul>
+          </div>
         </div>
+
       </div>
 
       <div class="navbar-right">
@@ -104,11 +110,13 @@
         {% endif %}
       </div>
       <ul id="mobile-nav" class="nav navbar-nav navbar-right">
+        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+        <li><a href="{{ path('adstacy_app_stream') }}"><i class="icon-bullhorn"></i>&nbsp; {{"stream"|trans}}</a></li>
+        {% endif %}
         <li><a href="{{ path('adstacy_app_explore') }}" title="Explore"><i class="icon-home"></i>&nbsp; Explore</a></li>
         <li><a href="{{ path('adstacy_app_trending') }}" title="Trending"><i class="icon-rocket"></i>&nbsp; Trending</a></li>
         <li><a href="{{ path('adstacy_app_tags') }}" title="Trending"><i class="icon-bookmark"></i>&nbsp; Popular Tags</a></li>
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-        <li><a href="{{ path('adstacy_app_stream') }}"><i class="icon-rss"></i>&nbsp; {{"stream"|trans}}</a></li>
         <li><a href="{{ path('adstacy_app_user_profile', {username: app.user.username}) }}"><i class="icon-user"></i>&nbsp; {{"profile"|trans}}</a></li>
         <li><a href="{{ path('fos_user_profile_edit') }}"><i class="icon-gear"></i>&nbsp; {{"settings"|trans}}</a></li>
         <li><a href="{{ path('fos_user_security_logout') }}"><i class="icon-off"></i>&nbsp; {{"logout"|trans}}</a></li>
