--- a/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/site-header.less
@@ -16,6 +16,10 @@
     border-color: 1px solid #555;
     box-shadow: 0 0 1px #555;
   }
+
+  .icon-bar {
+    background-color: #b00;
+  }
 }
 
 #site-nav-box {
@@ -210,7 +214,37 @@
   display: none;
 }
 
+#site-nav {
+  display: none;
+}
+
 /** Responsive **/
+@media screen and (max-width: 1300px){
+  #site-header {
+    .extra-nav {
+      display: none;
+    }
+  }
+  #site-nav {
+    display: block;
+  }
+  #site-nav-dropdown > .btn {
+    border-radius: 4px;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  #site-nav-box {
+    width: 470px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  #search-container {
+    width: 240px;
+  }
+}
+
 @media screen and (max-width: @screen-tablet) {
   // Hide Components
   #user-nav-dropdown {
@@ -220,6 +254,9 @@
     display: none;
   }
   #site-nav-dropdown {
+    display: none;
+  }
+  #extra-nav-box {
     display: none;
   }
 
@@ -272,6 +309,15 @@
     display: block;
     margin-right: 0;
   }
+}
+
+@media screen and (max-width: 320px) {
+  body {
+    padding: 0px;
+  }
+  #site-header {
+    position: static;
+  } 
 }
 
 /* Overrides */
