--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -86,26 +86,34 @@
         </div>
       {% endif %}
 
-      <div id="comments-sect" class="panel panel-default">
-        {{ form_start(form) }}
-          <div>{{ form_label(form.content) }}</div>
-          <div>{{ form_widget(form.content) }}</div>
-          <input type="submit" value="{{"comment"|trans}}">
-          {{ form_rest(form) }}
-        {{ form_end(form) }}
-        <div id="comments" href="#comments">
-          {% for comment in comments %}
-            {% set commentUser = comment.user %}
-            <div class="comment clearfix">
-              <div class="comment-user-pic">
-                <img src="{{ profile_pic(commentUser) }}" alt="{{ commentUser.realname }}" width="60" height="60">
-              </div>
-              <div class="comment-desc">
-                <h4 class="comment-user-realname">{{ commentUser.realName }}<span class="comment-created">{{ ago(comment.created) }}</h4>
-                <p class="comment-content">{{ parse_url(parse_hashtag(parse_mention(comment.content))) }}</p>
-              </div>
+      <div id="show-ad-comment" class="panel panel-default">
+        <div class="panel-body">
+          {{ form_start(form) }}
+            <div class="form-group">
+              {{ form_label(form.content) }}
+              {{ form_widget(form.content, { attr: { class: 'comment-box' } }) }}
             </div>
-          {% endfor %}
+            <input type="submit" value="{{"comment"|trans}}" class="hide">
+            {{ form_rest(form) }}
+          {{ form_end(form) }}
+
+          <div id="show-ad-comment-list" href="#comments">
+            {% for comment in comments %}
+              {% set commentUser = comment.user %}
+              <div class="media">
+                <div class="pull-left">
+                  <img src="{{ profile_pic(commentUser) }}" alt="{{ commentUser.realname }}" width="60" height="60" class="media-object">
+                </div>
+                <div class="media-body">
+                  <h4 class="media-heading">
+                    <a href="{{ path('adstacy_app_user_profile', {username: commentUser.username}) }}">{{ commentUser.realName }}</a> &middot;
+                    <small class="text-muted">{{ ago(comment.created) }}</small>
+                  </h4>
+                  {{ parse_url(parse_hashtag(parse_mention(comment.content))) }}
+                </div>
+              </div>
+            {% endfor %}
+          </div>
         </div>
       </div>
     </div>
