--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -70,7 +70,7 @@
 
       <div class="navbar-right">
         {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-          <a href="{{ path('adstacy_app_ad_create') }}" id="create-ads-btn" class="btn btn-primary navbar-btn" title="{{"ads.create"|trans}}">
+          <a href="{{ path('adstacy_app_ad_create') }}" id="create-ads-btn" class="btn btn-primary navbar-btn" data-toggle="tooltip" title="{{"ads.create"|trans}}">
             <i class="icon-plus"></i>
             <span id="mobile-create-ads-label">{{"ads.create"|trans}}</span>
           </a>
