--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -25,8 +25,10 @@
 
     a {
       color: #888;
+      display: inline-block;
       font-size: 11px;
       font-weight: bold;
+      margin-right: 10px;
     }
   }
 
@@ -78,8 +80,8 @@
 .ad-comment {
   .comment-box {
     width: 100%;
-    height: 41px;
-    padding: 2px 4px;
+    height: 44px;
+    padding: 2px 8px;
     background-color: #f4f4f4;
     resize: none;
     border: solid @border-color;
