--- a/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
+++ b/src/Adstacy/AppBundle/Resources/public/less/layout/ad.less
@@ -105,13 +105,15 @@
 
 @media screen and (max-width: 480px) {
   .ad {
-    width: 100%;
+    border-radius: 0;
     height: auto;
     margin: 10px 0;
+    width: 100%;
   }
   .ad-image img {
-    width: 100%;
+    border-radius: 0;
     height: auto;
     display: block;
+    width: 100%;
   }
 }
