--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -116,4 +116,7 @@
       </ul>
     </div>
   </div>
+  {% if is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+    {{ render_notification(5, 'top-notifications') }}
+  {% endif %}
 </header>
