--- a/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
+++ b/src/Adstacy/AppBundle/Resources/views/Ad/show.html.twig
@@ -18,7 +18,7 @@
 {% block content %}
   {% set user = ad.user %}
 
-  <div id="show-ad-single">
+  <div id="show-ad-single" class="clearfix">
     <div id="show-ad-content">
       <div class="panel panel-default">
         <div id="show-ad-toolbar" class="panel-body">
